fixed the stars in testimonials and the alignment of the meet the therapists images and cards.

--- a/styles/style.css
+++ b/styles/style.css
@@ -164,9 +164,9 @@ section {
 .each-testimonial > div:first-child {
     color: gold;
     margin-bottom: 15px; width: 100%;
-        display: flex;
-        justify-content: flex-end;
-        gap: 30px;
+    display: flex;
+    justify-content: center;
+
 }
 
 .each-testimonial > div:last-child {
@@ -204,7 +204,7 @@ section {
     height: 250px;
     object-fit: cover;
     border-radius: 200px;
-    margin-left: 50px;
+    margin-left: 40px;
     margin-bottom: 20px;
 }
 
@@ -231,10 +231,12 @@ footer > div {
     flex-wrap: wrap;
     gap: 40px;
 }
-
+.links {
+    width: 100px;
+}
 footer > div > div {
     flex: 1;
-    min-width: 300px;
+    min-width: 250px;
 }
 
 footer h2, footer h3 {
